@@ -17,28 +17,23 @@
 package com.echothree.control.user.accounting.server.command;
 
 import com.echothree.control.user.accounting.common.form.CreateGlAccountForm;
+import com.echothree.control.user.accounting.common.result.AccountingResultFactory;
 import com.echothree.model.control.accounting.server.control.AccountingControl;
+import com.echothree.model.control.accounting.server.logic.GlAccountLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.accounting.server.entity.Currency;
 import com.echothree.model.data.accounting.server.entity.GlAccount;
-import com.echothree.model.data.accounting.server.entity.GlAccountCategory;
-import com.echothree.model.data.accounting.server.entity.GlAccountClass;
-import com.echothree.model.data.accounting.server.entity.GlAccountType;
-import com.echothree.model.data.accounting.server.entity.GlResourceType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class CreateGlAccountCommand
@@ -48,14 +43,14 @@ public class CreateGlAccountCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                new SecurityRoleDefinition(SecurityRoleGroups.GlAccount.name(), SecurityRoles.Create.name())
-                )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.GlAccount.name(), SecurityRoles.Create.name())
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("GlAccountName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("ParentGlAccountName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("GlAccountTypeName", FieldType.ENTITY_NAME, true, null, null),
@@ -65,7 +60,7 @@ public class CreateGlAccountCommand
                 new FieldDefinition("CurrencyIsoName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("IsDefault", FieldType.BOOLEAN, false, null, null),
                 new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateGlAccountCommand */
@@ -75,73 +70,70 @@ public class CreateGlAccountCommand
     
     @Override
     protected BaseResult execute() {
+        var result = AccountingResultFactory.getCreateGlAccountResult();
         var accountingControl = Session.getModelController(AccountingControl.class);
-        String glAccountName = form.getGlAccountName();
-        GlAccount glAccount = accountingControl.getGlAccountByName(glAccountName);
-        
-        if(glAccount == null) {
-            String parentGlAccountName = form.getParentGlAccountName();
-            GlAccount parentGlAccount = null;
-            
-            if(parentGlAccountName != null) {
-                parentGlAccount = accountingControl.getGlAccountByName(parentGlAccountName);
-            }
-            
-            if(parentGlAccountName == null || parentGlAccount != null) {
-                String glAccountTypeName = form.getGlAccountTypeName();
-                GlAccountType glAccountType = accountingControl.getGlAccountTypeByName(glAccountTypeName);
-                
-                if(glAccountType != null) {
-                    String glAccountClassName = form.getGlAccountClassName();
-                    GlAccountClass glAccountClass = accountingControl.getGlAccountClassByName(glAccountClassName);
-                    
-                    if(glAccountClass != null) {
-                        String glAccountCategoryName = form.getGlAccountCategoryName();
-                        GlAccountCategory glAccountCategory = glAccountCategoryName == null? null: accountingControl.getGlAccountCategoryByName(glAccountCategoryName);
-                        
-                        if(glAccountCategoryName == null || glAccountCategory != null) {
-                            String glResourceTypeName = form.getGlResourceTypeName();
-                            GlResourceType glResourceType = accountingControl.getGlResourceTypeByName(glResourceTypeName);
-                            
-                            if(glResourceType != null) {
-                                String currencyIsoName = form.getCurrencyIsoName();
-                                Currency currency = accountingControl.getCurrencyByIsoName(currencyIsoName);
-                                
-                                if(currency != null) {
-                                    var partyPK = getPartyPK();
-                                    Boolean isDefault = glAccountCategory == null? null: Boolean.valueOf(form.getIsDefault());
-                                    var description = form.getDescription();
-                                    
-                                    glAccount = accountingControl.createGlAccount(glAccountName, parentGlAccount, glAccountType,
-                                            glAccountClass, glAccountCategory, glResourceType, currency, isDefault, partyPK);
-                                    
-                                    if(description != null) {
-                                        accountingControl.createGlAccountDescription(glAccount, getPreferredLanguage(), description,
-                                                partyPK);
-                                    }
-                                } else {
-                                    addExecutionError(ExecutionErrors.UnknownCurrencyIsoName.name(), currencyIsoName);
-                                }
+        GlAccount glAccount = null;
+        var parentGlAccountName = form.getParentGlAccountName();
+        GlAccount parentGlAccount = null;
+
+        if(parentGlAccountName != null) {
+            parentGlAccount = accountingControl.getGlAccountByName(parentGlAccountName);
+        }
+
+        if(parentGlAccountName == null || parentGlAccount != null) {
+            var glAccountTypeName = form.getGlAccountTypeName();
+            var glAccountType = accountingControl.getGlAccountTypeByName(glAccountTypeName);
+
+            if(glAccountType != null) {
+                var glAccountClassName = form.getGlAccountClassName();
+                var glAccountClass = accountingControl.getGlAccountClassByName(glAccountClassName);
+
+                if(glAccountClass != null) {
+                    var glAccountCategoryName = form.getGlAccountCategoryName();
+                    var glAccountCategory = glAccountCategoryName == null? null: accountingControl.getGlAccountCategoryByName(glAccountCategoryName);
+
+                    if(glAccountCategoryName == null || glAccountCategory != null) {
+                        var glResourceTypeName = form.getGlResourceTypeName();
+                        var glResourceType = accountingControl.getGlResourceTypeByName(glResourceTypeName);
+
+                        if(glResourceType != null) {
+                            var currencyIsoName = form.getCurrencyIsoName();
+                            var currency = accountingControl.getCurrencyByIsoName(currencyIsoName);
+
+                            if(currency != null) {
+                                var glAccountName = form.getGlAccountName();
+                                var isDefault = glAccountCategory == null? null: Boolean.valueOf(form.getIsDefault());
+                                var description = form.getDescription();
+                                var partyPK = getPartyPK();
+
+                                glAccount = GlAccountLogic.getInstance().createGlAccount(this, glAccountName, parentGlAccount,
+                                        glAccountType, glAccountClass, glAccountCategory, glResourceType, currency, isDefault,
+                                        getPreferredLanguage(), description, partyPK);
                             } else {
-                                addExecutionError(ExecutionErrors.UnknownGlResourceTypeName.name(), glResourceTypeName);
+                                addExecutionError(ExecutionErrors.UnknownCurrencyIsoName.name(), currencyIsoName);
                             }
                         } else {
-                            addExecutionError(ExecutionErrors.UnknownGlAccountCategoryName.name(), glAccountCategoryName);
+                            addExecutionError(ExecutionErrors.UnknownGlResourceTypeName.name(), glResourceTypeName);
                         }
                     } else {
-                        addExecutionError(ExecutionErrors.UnknownGlAccountClassName.name(), glAccountClassName);
+                        addExecutionError(ExecutionErrors.UnknownGlAccountCategoryName.name(), glAccountCategoryName);
                     }
                 } else {
-                    addExecutionError(ExecutionErrors.UnknownGlAccountTypeName.name(), glAccountTypeName);
+                    addExecutionError(ExecutionErrors.UnknownGlAccountClassName.name(), glAccountClassName);
                 }
             } else {
-                addExecutionError(ExecutionErrors.UnknownParentGlAccountName.name(), parentGlAccountName);
+                addExecutionError(ExecutionErrors.UnknownGlAccountTypeName.name(), glAccountTypeName);
             }
         } else {
-            addExecutionError(ExecutionErrors.DuplicateGlAccountName.name(), glAccountName);
+            addExecutionError(ExecutionErrors.UnknownParentGlAccountName.name(), parentGlAccountName);
         }
-        
-        return null;
+
+        if(glAccount != null) {
+            result.setGlAccountName(glAccount.getLastDetail().getGlAccountName());
+            result.setEntityRef(glAccount.getPrimaryKey().getEntityRef());
+        }
+
+        return result;
     }
     
 }
